@@ -1,5 +1,9 @@
 2021-01-26  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/server/Channel.java (Control):
+	Changed action method prototype to
+	"void action(Dispatcher,Message,Message) throws Exception".
+
 	* src/main/java/galyleo/kernel/Kernel.java:
 	Publish execute_input and execute_result messages in response to
 	execute_request messages.
